# check_psi

./: .pre-commit-config.yaml  Pipfile  README.md  check_psi.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/check_psi/: cli.py
tests/: test_check_psi.py
