[project]
name = "check-psi"
version = "1.1.1"
description = "A nagios plugin for checking pressure stall information values provided by the kernel for cpu, io and memory"
readme = "README.md"
authors = [
    { name = "Bona Fide IT GmbH", email = "github@bona-fide.it" },
    { name = "Olaf Rühenbeck", email = "oruehenbeck@bona-fide.it" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["icinga", "nagios", "plugin", "check_command", "debian", "psi", "pressure stall information", "linux"]
requires-python = ">=3.9"
dependencies = [
    "nagiosplugin>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/BonaFideIT/check_psi"

[project.scripts]
check_psi = "check_psi.cli:main"
